image save and access complete (vid 36)

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-USER=postgres
+DBNAME=postgres
+DB_USER=postgres
 PASSWORD=Jemish@148545
 HOST=db.zochizrdxcmlsxqbtzia.supabase.co
 PORT=5432
-DBNAME=postgres
